--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="#" class="logo">Leo</a>
+        <a href="index.html" class="logo">Leo</a>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -94,7 +94,7 @@
 
         </div>
         <div class="testimonial-card">
-            <div class="work-title-wrap">
+            <div class="work-title-wrap-2">
                 <div class="work-tag">
                     Tu1Ahorro
                 </div>
@@ -102,6 +102,7 @@
                 <p>Lleva un control de tus gastos e ingresos con nuestra aplicación, adaptada para Web y Dispositivos Móviles</p>
                 <a href="#" target="_blank" class="button-external-site">Visitar</a>
             </div>
+            <img src="/images/tu1horro.jpg" alt="mockup" class="tu1ahorro-image">
         </div>
         <div class="small-card">
 
