--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
             <img src="/images/tu1horro.jpg" alt="mockup" class="tu1ahorro-image">
         </div>
         <div class="small-card">
-
+            <div class="article-content-wrapper">
+                <div class="work-tag">
+                    Artículo
+                </div>
+                <h2>Diseño Global y Experiencia de Producto</h2>
+                <p>Líder de diseño en la futura experiencia de compra de comercio electrónico para Tu1Estilo que incluye páginas de destino, detalles del producto, carrito, y contacto. Este trabajo está en curso.</p>
+            </div>
         </div>
         <!-- Footer -->
         <div class="contact-card" id="Contact">
@@ -114,6 +120,7 @@
                 <a href="#" class="contact-social-icon"><i class="fa-solid fa-envelope"></i></a>
                 <a href="#" class="contact-social-icon"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#" class="contact-social-icon"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="contact-social-icon"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#" class="contact-social-icon"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
