update navbar menu

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <!-- Header -->
     <header>
         <a href="index.html" class="logo">Leo</a>
+
+        <div class="button-menu btn15" data-menu="15">
+            <div class="icon"></div>
+        </div>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
