--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="icon"></div>
         </div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#">Works</a></li>
             <li><a href="#Contact">Contacto</a></li>
         </ul>
