--- a/about.html
+++ b/about.html
@@ -38,16 +38,16 @@
                 <h1>Algunas Palabras Sobre Mi</h1>
                 <div class="wrapper">
                     <p>Me enorgullece decir que poseo habilidades sólidas en HTML, CSS y JavaScript. Además, me mantengo al día con las últimas tecnologías y herramientas para asegurarme de que mi trabajo esté siempre a la vanguardia.
-                    <br>
+                    <br><br>
                     Mi objetivo principal es crear sitios web que no solo sean visualmente impresionantes, sino también intuitivos y de fácil navegación para los usuarios. Creo en la importancia de la usabilidad y la accesibilidad, y siempre me esfuerzo por optimizar el rendimiento de mis proyectos.</p>
                 </div>
                 <div class="wrapper"></div>
                 <div class="wrapper">
                     <ul>
-                        <li class="wrapper-list">Produccion</li>
+                        <li class="wrapper-list">Diseño</li>
                         <li class="wrapper-list">Grabacion</li>
-                        <li class="wrapper-list">Direccion de Arte</li>
                         <li class="wrapper-list">Vision</li>
+                        <li class="wrapper-list">Creación</li>
                         <li class="wrapper-list">Branding</li>
                         <li class="wrapper-list">Marketing</li>
                     </ul>
