--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
         </div>
         <div class="hero-right">
             <!-- <img src="/images/Leonel Chaparro.png" alt=""> -->
+            <div class="carousel">
+                <div class="slides">
+                  <img src="/images/Leonel-About.jpg" alt="Imagen 1">
+                  <img src="/images/Leonel-About.jpg" alt="Imagen 2">
+                  <img src="/images/Leonel-About.jpg" alt="Imagen 3">
+                  <img src="/images/Leonel-About.jpg" alt="Imagen 4">
+                  <img src="/images/Leonel-About.jpg" alt="Imagen 5">
+                </div>
+                <div class="dots">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+              </div>
         </div>
 
         <!-- Works -->
