update about corrections 2

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="icon"></div>
         </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="#">Works</a></li>
             <li><a href="#Contact">Contacto</a></li>
         </ul>
@@ -29,36 +29,32 @@
     <!-- Main -->
     <div class="page-grid">
         <!-- Hero -->
-        <div class="hero-card">
-            <div class="hero-image">
-                <img src="/images/Leonel Chaparro.png" alt="hero-image">
-            </div>
-            <div class="hero-content">
-                <h2>Me Presento</h2>
-                <p>¡Hola! soy Leonel Chaparro, un apasionado desarrollador frontend con experiencia en la creación de páginas web atractivas y funcionales. Para mí, el desarrollo frontend es como un hobby en el que puedo dar vida a diseños web únicos. Me encanta fusionar la estética y la funcionalidad para ofrecer experiencias cautivadoras a los usuarios.</p>
-                <button class="btn-primary">Contacto</button>
+        <div class="section-top">
+            <div class="hero-about">
+                <div class="hero-column">
+                    <div class="hero-custom">
+                        <img src="/images/Leonel-About.jpg" alt="Profile">
+                    </div>
+                </div>
+                <div class="hero-column-right">
+                    <h1>Algunas Palabras Sobre Mi</h1>
+                    <div class="wrapper">
+                        <p>¡Hola! soy Leonel Chaparro, un apasionado desarrollador frontend con experiencia en la creación de páginas web atractivas y funcionales. Para mí, el desarrollo frontend es como un hobby en el que puedo dar vida a diseños web únicos. Me encanta fusionar la estética y la funcionalidad para ofrecer experiencias cautivadoras a los usuarios.</p>
+                        <button class="btn-primary">Contacto</button>
+                    </div>
+                    <div class="wrapper"></div>
+                    <div class="wrapper">
+                        <ul>
+                            <li class="wrapper-list">Diseño</li>
+                            <li class="wrapper-list">Grabacion</li>
+                            <li class="wrapper-list">Creación</li>
+                            <li class="wrapper-list">Branding</li>
+                            <li class="wrapper-list">Marketing</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="hero-right">
-            <!-- <img src="/images/Leonel Chaparro.png" alt=""> -->
-            <div class="carousel">
-                <div class="slides">
-                  <img src="/images/Leonel-About.jpg" alt="Imagen 1">
-                  <img src="/images/Leonel-About.jpg" alt="Imagen 2">
-                  <img src="/images/Leonel-About.jpg" alt="Imagen 3">
-                  <img src="/images/Leonel-About.jpg" alt="Imagen 4">
-                  <img src="/images/Leonel-About.jpg" alt="Imagen 5">
-                </div>
-                <div class="dots">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
-              </div>
-        </div>
-
         <!-- Works -->
         <div class="tu1estilo-card">
             <div class="work-frame-wide">
@@ -72,6 +68,36 @@
                 <img src="/images/Mockup Tu1estilo.jpg" alt="mockup" class="tu1estilo-image">
             </div>
         </div>
+        <!-- Section -->
+        <div class="hero-card">
+            <div class="hero-image">
+                <img src="/images/Leonel Chaparro.png" alt="hero-image">
+            </div>
+            <div class="hero-content">
+                <h2>Me Presento</h2>
+                <p>Me enorgullece decir que poseo habilidades sólidas en HTML, CSS y JavaScript. Mi objetivo principal es crear sitios web que no solo sean visualmente impresionantes, sino también intuitivos y de fácil navegación para los usuarios. Creo en la importancia de la usabilidad y la accesibilidad, y siempre me esfuerzo por optimizar el rendimiento de mis proyectos.</p>
+                <button class="btn-primary">Contacto</button>
+            </div>
+        </div>
+        <div class="hero-right">
+            <div class="carousel">
+                <div class="slides">
+                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 1">
+                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 2">
+                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 3">
+                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 4">
+                  <img src="/images/Dubai_camisa.jpg" alt="Imagen 5">
+                </div>
+                <div class="dots">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+              </div>
+        </div>
+        
         <!-- Slider -->
         <div class="slider">
             <!-- Carrousel -->
