--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="icon"></div>
         </div>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#">Inicio</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Works</a></li>
+            <li><a href="#">Proyectos</a></li>
             <li><a href="#Contact">Contacto</a></li>
         </ul>
     </header>
