update nav hover effect

--- a/index.html
+++ b/index.html
@@ -20,10 +20,30 @@
             <div class="icon"></div>
         </div>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Proyectos</a></li>
-            <li><a href="#Contact">Contacto</a></li>
+            <li>
+                <a href="#">
+                    <span>Inicio</span>
+                    <span>Inicio</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>About</span>
+                    <span>About</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>Proyectos</span>
+                    <span>Proyectos</span>
+                </a>
+            </li>
+            <li>
+                <a href="#Contact">
+                    <span>Contacto</span>
+                    <span>Contacto</span>
+                </a>
+            </li>
         </ul>
     </header>
     <!-- Main -->
@@ -74,8 +94,8 @@
                 <img src="/images/Leonel Chaparro.png" alt="hero-image">
             </div>
             <div class="hero-content">
-                <h2>Me Presento</h2>
-                <p>Me enorgullece decir que poseo habilidades sólidas en HTML, CSS y JavaScript. Mi objetivo principal es crear sitios web que no solo sean visualmente impresionantes, sino también intuitivos y de fácil navegación para los usuarios. Creo en la importancia de la usabilidad y la accesibilidad, y siempre me esfuerzo por optimizar el rendimiento de mis proyectos.</p>
+                <h2>Desarrollador Frontend</h2>
+                <p>Me enorgullece decir que poseo habilidades en HTML, CSS y JavaScript. Mi objetivo principal es crear sitios web que no solo sean visualmente atractivos, sino también intuitivos y de fácil navegación para los usuarios. Creo en la importancia de la usabilidad y la accesibilidad, y siempre me esfuerzo por optimizar el rendimiento de mis proyectos.</p>
                 <button class="btn-primary">Contacto</button>
             </div>
         </div>
