--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                 <div class="hero-column-right">
                     <h1>Algunas Palabras Sobre Mi</h1>
                     <div class="wrapper">
-                        <p>¡Hola! soy Leonel Chaparro, un apasionado desarrollador frontend con experiencia en la creación de páginas web atractivas y funcionales. Para mí, el desarrollo frontend es como un hobby en el que puedo dar vida a diseños web únicos. Me encanta fusionar la estética y la funcionalidad para ofrecer experiencias cautivadoras a los usuarios.</p>
+                        <p>¡Hola! soy Leonel Chaparro, Argentino y apasionado desarrollador frontend con experiencia en la creación de páginas web atractivas y funcionales. Para mí, el desarrollo frontend es como un hobby, me encanta porque siento que estoy creando, me expreso a través del diseño en los detalles y en el que puedo dar vida a web únicas.</p>
                         <button class="btn-primary">Contacto</button>
                     </div>
                     <div class="wrapper"></div>
                     <div class="wrapper">
                         <ul>
                             <li class="wrapper-list">Diseño</li>
-                            <li class="wrapper-list">Grabacion</li>
+                            <li class="wrapper-list">Desarrollo</li>
                             <li class="wrapper-list">Creación</li>
                             <li class="wrapper-list">Branding</li>
                             <li class="wrapper-list">Marketing</li>
@@ -95,7 +95,7 @@
             </div>
             <div class="hero-content">
                 <h2>Desarrollador Frontend</h2>
-                <p>Me enorgullece decir que poseo habilidades en HTML, CSS y JavaScript. Mi objetivo principal es crear sitios web que no solo sean visualmente atractivos, sino también intuitivos y de fácil navegación para los usuarios. Creo en la importancia de la usabilidad y la accesibilidad, y siempre me esfuerzo por optimizar el rendimiento de mis proyectos.</p>
+                <p>Me enorgullece decir que poseo habilidades en HTML, CSS y JavaScript. Mi motivación principal es crear sitios web que no solo sean visualmente atractivos, sino también de fácil navegación para los usuarios. Creo en la importancia de la usabilidad y la accesibilidad, y siempre me esfuerzo por optimizar el rendimiento de mis proyectos.</p>
                 <button class="btn-primary">Contacto</button>
             </div>
         </div>
@@ -183,11 +183,11 @@
         <div class="contact-card" id="Contact">
             <h5>Leonel Chaparro</h5>
             <div class="contact-block">
-                <a href="#" class="contact-social-icon"><i class="fa-solid fa-envelope"></i></a>
-                <a href="#" class="contact-social-icon"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="contact-social-icon"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="contact-social-icon"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#" class="contact-social-icon"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" class="contact-social-icon" title="Mail"><i class="fa-solid fa-envelope"></i></a>
+                <a href="#" class="contact-social-icon" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#" class="contact-social-icon" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="contact-social-icon" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="contact-social-icon" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
 
