--- a/index.html
+++ b/index.html
@@ -157,7 +157,15 @@
             </ul>
         </div>
         <div class="tu1ahorro-card">
-
+            <div class="card">
+                <div class="card-content">
+                    <h2 class="card-title">Aplicación de Clima</h2>
+                    <p class="card-body">
+                        Descubre el clima diario con mi aplicación diseñada con amor. Mantente informado y preparado en todo momento.
+                    </p>
+                    <a href="#" class="button">Live Preview</a>
+                </div>
+            </div>
         </div>
         <div class="testimonial-card">
             <div class="work-title-wrap-2">
