--- a/index.html
+++ b/index.html
@@ -163,7 +163,14 @@
                     <p class="card-body">
                         Descubre el clima diario con mi aplicación diseñada con amor. Mantente informado y preparado en todo momento.
                     </p>
-                    <a href="#" class="button">Live Preview</a>
+                    <div class="card-bottom">
+                        <a href="#" class="button">Live Preview</a>
+                        <div class="d-flex">
+                            <a href="#" class="lenguaje-button" title="HTML"><i class="fa-brands fa-html5"></i></a>
+                            <a href="#" class="lenguaje-button" title="CSS"><i class="fa-brands fa-css3-alt"></i></a>
+                            <a href="#" class="lenguaje-button" title="JavaScript"><i class="fa-brands fa-square-js"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
