--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
                     </div>
                     <h2>Diseño Global y Experiencia de Producto</h2>
                     <p>Líder de diseño en la futura experiencia de compra de comercio electrónico para Tu1Estilo que incluye páginas de destino, detalles del producto, carrito, y contacto. Este trabajo está en curso.</p>
+                    <a href="https://tu1estilo.netlify.app/index.html" target="_blank" class="button-external-site">Visitar <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M17 7l-10 10"></path>
+                        <path d="M8 7l9 0l0 9"></path>
+                     </svg>
+                    </a>
                 </div>
                 <img src="/images/Mockup Tu1estilo.jpg" alt="mockup" class="tu1estilo-image">
             </div>
@@ -164,11 +170,15 @@
                         Descubre el clima diario con mi aplicación diseñada con amor. Mantente informado y preparado en todo momento.
                     </p>
                     <div class="card-bottom">
-                        <a href="#" class="button">Live Preview</a>
+                        <a href="#" class="button">Visitar <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M17 7l-10 10"></path>
+                            <path d="M8 7l9 0l0 9"></path>
+                         </svg></a>
                         <div class="d-flex">
-                            <a href="#" class="lenguaje-button" title="HTML"><i class="fa-brands fa-html5"></i></a>
-                            <a href="#" class="lenguaje-button" title="CSS"><i class="fa-brands fa-css3-alt"></i></a>
-                            <a href="#" class="lenguaje-button" title="JavaScript"><i class="fa-brands fa-square-js"></i></a>
+                            <a class="lenguaje-button" title="HTML"><i class="fa-brands fa-html5"></i></a>
+                            <a class="lenguaje-button" title="CSS"><i class="fa-brands fa-css3-alt"></i></a>
+                            <a class="lenguaje-button" title="JavaScript"><i class="fa-brands fa-square-js"></i></a>
                         </div>
                     </div>
                 </div>
@@ -181,9 +191,19 @@
                 </div>
                 <h2>Tu Aliado en tus Finanzas Personales</h2>
                 <p>Lleva un control de tus gastos e ingresos con nuestra aplicación, adaptada para Web y Dispositivos Móviles</p>
-                <a href="#" target="_blank" class="button-external-site">Visitar</a>
+                <a href="#" target="_blank" class="button-external-site">Visitar <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M17 7l-10 10"></path>
+                    <path d="M8 7l9 0l0 9"></path>
+                 </svg>
+                </a>
             </div>
             <img src="/images/tu1horro.jpg" alt="mockup" class="tu1ahorro-image">
+            <!-- <button class="floating-button"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M17 7l-10 10"></path>
+                <path d="M8 7l9 0l0 9"></path>
+             </svg></button> -->
         </div>
         <div class="small-card">
             <div class="article-content-wrapper">
