--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leonel Chaparro UI & UX Design Portfolio</title>
+    <link rel="icon" href="/images/Icono2.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -165,6 +166,9 @@
         <div class="tu1ahorro-card">
             <div class="card">
                 <div class="card-content">
+                    <div class="work-tag">
+                        Clima
+                    </div>
                     <h2 class="card-title">Aplicación de Clima</h2>
                     <p class="card-body">
                         Descubre el clima diario con mi aplicación diseñada con amor. Mantente informado y preparado en todo momento.
@@ -191,12 +195,19 @@
                 </div>
                 <h2>Tu Aliado en tus Finanzas Personales</h2>
                 <p>Lleva un control de tus gastos e ingresos con nuestra aplicación, adaptada para Web y Dispositivos Móviles</p>
-                <a href="#" target="_blank" class="button-external-site">Visitar <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M17 7l-10 10"></path>
-                    <path d="M8 7l9 0l0 9"></path>
-                 </svg>
-                </a>
+                <div class="card-bottom">
+                    <a href="#" target="_blank" class="button-external-site">Visitar <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M17 7l-10 10"></path>
+                        <path d="M8 7l9 0l0 9"></path>
+                     </svg>
+                    </a>
+                    <div class="d-flex">
+                        <a class="lenguaje-button" title="HTML"><i class="fa-brands fa-html5"></i></a>
+                        <a class="lenguaje-button" title="CSS"><i class="fa-brands fa-css3-alt"></i></a>
+                        <a class="lenguaje-button" title="JavaScript"><i class="fa-brands fa-square-js"></i></a>
+                    </div>
+                </div>
             </div>
             <img src="/images/tu1horro.jpg" alt="mockup" class="tu1ahorro-image">
             <!-- <button class="floating-button"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
