--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <img src="/images/Mockup Android.jpg" alt="slide-image">
                 </div>
                 <div class="slide">
-                    <img src="/images/pandora-mockup.jpg" alt="slide-image">
+                    <img src="/images/Notebook tu1ahorro Mockup.jpg" alt="slide-image">
                 </div>
 
                 <div class="slider-indicator">
@@ -209,7 +209,7 @@
                     </div>
                 </div>
             </div>
-            <img src="/images/tu1horro.jpg" alt="mockup" class="tu1ahorro-image">
+            <img src="/images/Notebook tu1ahorro Mockup.jpg" alt="mockup" class="tu1ahorro-image">
             <!-- <button class="floating-button"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <path d="M17 7l-10 10"></path>
