--- a/index.html
+++ b/index.html
@@ -153,42 +153,6 @@
         </div>
         <!-- Works -->
         <div class="small-card">
-            <h2>Lenguajes</h2>
-            <ul class="skills-list">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Git</li>
-                <li>Github</li>
-                <li>Bootstrap</li>
-            </ul>
-        </div>
-        <div class="tu1ahorro-card" id="Proyectos">
-            <div class="card">
-                <div class="card-content">
-                    <div class="work-tag">
-                        Clima
-                    </div>
-                    <h2 class="card-title">Aplicación de Clima</h2>
-                    <p class="card-body">
-                        Descubre el clima diario con mi aplicación diseñada con amor. Mantente informado y preparado en todo momento.
-                    </p>
-                    <div class="card-bottom">
-                        <a href="https://tu1clima.netlify.app/" target="_blank" class="button">Visitar <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M17 7l-10 10"></path>
-                            <path d="M8 7l9 0l0 9"></path>
-                         </svg></a>
-                        <div class="d-flex">
-                            <a class="lenguaje-button" title="HTML"><i class="fa-brands fa-html5"></i></a>
-                            <a class="lenguaje-button" title="CSS"><i class="fa-brands fa-css3-alt"></i></a>
-                            <a class="lenguaje-button" title="JavaScript"><i class="fa-brands fa-square-js"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="testimonial-card">
             <div class="work-title-wrap-2">
                 <div class="work-tag">
                     Tu1Ahorro
@@ -209,6 +173,11 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="tu1ahorro-card" id="Proyectos">
+            <img src="/images/Floating Ipad y Iphone.jpg" alt="mockup" class="tu1ahorro-image">
+        </div>
+        <div class="testimonial-card">
             <img src="/images/Notebook tu1ahorro Mockup.jpg" alt="mockup" class="tu1ahorro-image">
             <!-- <button class="floating-button"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -217,17 +186,30 @@
              </svg></button> -->
         </div>
         <div class="small-card">
-            <div class="article-content-wrapper">
+            <div class="work-title-wrap-2">
                 <div class="work-tag">
-                    Artículo
+                    Clima
                 </div>
-                <h2>Diseño Global y Experiencia de Producto</h2>
-                <p>Líder de diseño en la futura experiencia de compra de comercio electrónico para Tu1Estilo que incluye páginas de destino, detalles del producto, carrito, y contacto. Este trabajo está en curso.</p>
+                <h2>Aplicación de Clima</h2>
+                <p>Descubre el clima diario con mi aplicación diseñada con amor. Mantente informado y preparado en todo momento.</p>
+                <div class="card-bottom">
+                    <a href="https://tu1clima.netlify.app/" target="_blank" class="button-external-site">Visitar <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M17 7l-10 10"></path>
+                        <path d="M8 7l9 0l0 9"></path>
+                     </svg>
+                    </a>
+                    <div class="d-flex">
+                        <a class="lenguaje-button" title="HTML"><i class="fa-brands fa-html5"></i></a>
+                        <a class="lenguaje-button" title="CSS"><i class="fa-brands fa-css3-alt"></i></a>
+                        <a class="lenguaje-button" title="JavaScript"><i class="fa-brands fa-square-js"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Footer -->
         <div class="contact-card" id="Contact">
-            <h5>Leonel Chaparro</h5>
+            <h1>CONTACTAME</h1>
             <div class="contact-block">
                 <a href="#" class="contact-social-icon" title="Mail"><i class="fa-solid fa-envelope"></i></a>
                 <a href="#" class="contact-social-icon" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
@@ -235,6 +217,7 @@
                 <a href="#" class="contact-social-icon" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#" class="contact-social-icon" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
             </div>
+            <h5>Leonel Chaparro</h5>
         </div>
 
         <div id="progress">
