mejoras portfolio skills

--- a/index.html
+++ b/index.html
@@ -101,8 +101,50 @@
                 <img src="/images/Leonel Chaparro.png" alt="hero-image">
             </div>
             <div class="hero-content">
-                <h2>Desarrollador Frontend</h2>
-                <p>Me enorgullece decir que poseo habilidades en HTML, CSS y JavaScript. Mi motivación principal es crear sitios web que no solo sean visualmente atractivos, sino también de fácil navegación para los usuarios. Creo en la importancia de la usabilidad y la accesibilidad, y siempre me esfuerzo por optimizar el rendimiento de mis proyectos.</p>
+                <div class="hero-info">
+                    <h1>Desarrollador Frontend</h1>
+                    <p>Me enorgullece decir que poseo habilidades en HTML, CSS y JavaScript. Mi motivación principal es crear sitios web que no solo sean visualmente atractivos, sino también de fácil navegación para los usuarios. Creo en la importancia de la usabilidad y la accesibilidad, y siempre me esfuerzo por optimizar el rendimiento de mis proyectos.</p>
+                </div>
+                <div class="hero-info">
+                    <h2>Habilidades</h2>
+                    <ul class="skills">
+                        <li class="skills-icon">
+                            <img src="/images/skills/html5-original-wordmark.svg" alt="logo-skill">
+                        </li>
+                        <li class="skills-icon">
+                            <img src="/images/skills/css3-original-wordmark.svg" alt="logo-skill">
+                        </li>
+                        <li class="skills-icon">
+                            <img src="/images/skills/javascript-original.svg" alt="logo-skill">
+                        </li>
+                        <li class="skills-icon">
+                            <img src="/images/skills/react-original-wordmark.svg" alt="logo-skill">
+                        </li>
+                        <li class="skills-icon">
+                            <img src="/images/skills/bootstrap-plain-wordmark.svg" alt="logo-skill">
+                        </li>
+                        <li class="skills-icon">
+                            <img src="/images/skills/tailwindcss-icon.svg" alt="logo-skill">
+                        </li>
+                        <li class="skills-icon">
+                            <img src="/images/skills/logo-title.svg" alt="logo-skill">
+                        </li>
+                        <li class="skills-icon">
+                            <img src="/images/skills/git-scm-icon.svg" alt="logo-skill">
+                        </li>
+                    </ul>
+                </div>
+                <div class="hero-info">
+                    <h3>También Trabajo Con</h3>
+                    <ul class="skills">
+                        <li class="skills-icon">
+                            <img src="/images/skills/figma-icon.svg" alt="logo-skill">
+                        </li>
+                        <li class="skills-icon">
+                            <img src="/images/skills/Adobe_Photoshop_CC_icon.svg" alt="logo-skill">
+                        </li>
+                    </ul>
+                </div>
                 <button class="btn-primary">Contacto</button>
             </div>
         </div>
